# fullstack-training

./: LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/migrations/: 0001_create_tables.sql  0002_seed_places.sql
backend/src/: db.rs  error.rs  main.rs  models.rs
backend/src/routes/: mod.rs  places.rs
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/login/: route.ts
frontend/src/app/api/logout/: route.ts
frontend/src/app/api/me/: route.ts
frontend/src/app/api/places/: route.ts
frontend/src/app/api/places/[id]/: route.ts
frontend/src/app/lib/: env.ts  types.ts
frontend/src/app/login/: page.tsx
frontend/src/app/places/[id]/: page.tsx
frontend/src/app/profilo/: page.tsx
frontend/src/components/: Filters.tsx  Navbar.tsx  PlaceCard.tsx
