[package]
name = "fullstack_training_bff"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features=["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
dotenvy = "0.15"
tower-http = { version = "0.6.6", features = ["cors","trace"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls","postgres","uuid","chrono","json"] }
uuid = { version = "1", features = ["serde","v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"    # JWT
argon2 = "0.5"        # password hashing
anyhow = "1.0"

